using UnityEngine;

namespace Factory.Pizza
{
    public class ChicagoStyleSimplePizza : Pizza
    {
        public ChicagoStyleSimplePizza()
        {
            Toppings.Add("シカゴ");
        }
    }
}